# zoau_stubs

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  SOLUTION_SUMMARY.md  pyproject.toml  setup.py
zoautil_py/: __init__.pyi  common.pyi  core_return_codes.pyi  datasets.pyi  exceptions.pyi  gdgs.pyi  jobs.pyi  members.pyi  mvscmd.pyi  opercmd.pyi  utilities.pyi  volumes.pyi  vsam.pyi  zoau_io.pyi  zsystem.pyi  ztypes.pyi
